# Gaussian-Fluids-Code

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml  requirements.txt
2D/: GSR.py  advance.py  init_cond.py  initialize.py
3D/: GSR.py  advance.py  advance_density.py  init_cond.py  initialize.py  mesh_sampler.py
